--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     <button class="main-landing__button">
                         Get Started
                     </button>
+                    <button class="main-landing__button-arrow">
                     <img src="icon/arrow-down.svg" class="main-landing__arrow" alt="arrow" />
+                    </button>
                 </div>
             </div>
             <img src="images/hero.png" class="main-landing__img" alt="hero" />
@@ -68,7 +70,7 @@
             </div>
 
         </section>
-        <section class="main-landing">
+        <section class="main-landing__bottom">
             <div class="main-landing__wrapper">
                 <h1 class="main-landing__titleMin">
                     In-depth metrics
