--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         Get Started
                     </button>
                     <button class="main-landing__button-arrow">
-                    <img src="icon/arrow-down.svg" class="main-landing__arrow" alt="arrow" />
+                        <img src="icon/arrow-down.svg" class="main-landing__arrow" alt="arrow" />
                     </button>
                 </div>
             </div>
@@ -116,25 +116,22 @@
 
             </div>
         </section>
-        <section class="main__switcher switcher">
-            <div>
+        <section class="main-info">
+            <dia class="main-info__header">
                 <h1 class="switcher__title">
                     Get the right plan for future product.
                 </h1>
-            </div>
-            <div class="switcher__form">
-                <div class="switcher__form-item item-1">
-                    <input id="fid-1" type="radio" name="radio" value="off" checked>
-                    <label for="fid-1">Yearly</label>
+                <div class="switcher__form">
+                    <div class="switcher__form-item item-1">
+                        <input id="fid-1" type="radio" name="radio" value="off" checked>
+                        <label for="fid-1">Yearly</label>
+                    </div>
+                    <div class="switcher__form-item item-2">
+                        <input id="fid-2" type="radio" name="radio" value="on">
+                        <label for="fid-2">Monthly</label>
+                    </div>
                 </div>
-                <div class="switcher__form-item item-2">
-                    <input id="fid-2" type="radio" name="radio" value="on">
-                    <label for="fid-2">Monthly</label>
-                </div>
-            </div>
-
-        </section>
-        <section class="main-info">
+            </dia>
             <div class="info__sector">
                 <div class="info-card">
                     <p class="info__sector-textW">
@@ -150,38 +147,36 @@
                         Get Started
                     </button>
                 </div>
+            <div class="info-card">
+                <p class="info__sector-textW">
+                    Premium
+                </p>
+                <h1 class="info__sector-title">
+                    $29/month
+                </h1>
+                <p class="info__sector-text">
+                    10 Website <br><br>15 GB Hosting <br><br>Premium Support
+                </p>
+                <button class="info__sector-button">
+                    Get Started
+                </button>
             </div>
-            <div class="info__sector">
-                <div class="info-card">
-                    <p class="info__sector-textW">
-                        Premium
-                    </p>
-                    <h1 class="info__sector-title">
-                        $29/month
-                    </h1>
-                    <p class="info__sector-text">
-                        10 Website <br><br>15 GB Hosting <br><br>Premium Support
-                    </p>
-                    <button class="info__sector-button">
-                        Get Started
-                    </button>
-                </div>
+            
+            <div class="info-card">
+                <p class="info__sector-textW">
+                    Enterprise
+                </p>
+                <h1 class="info__sector-title">
+                    $49/month
+                </h1>
+                <p class="info__sector-text">
+                    Unlimited Website <br><br>50 GB Hosting <br><br>Premium Support
+                </p>
+                <button class="info__sector-button">
+                    Get Started
+                </button>
             </div>
-            <div class="info__sector">
-                <div class="info-card">
-                    <p class="info__sector-textW">
-                        Enterprise
-                    </p>
-                    <h1 class="info__sector-title">
-                        $49/month
-                    </h1>
-                    <p class="info__sector-text">
-                        Unlimited Website <br><br>50 GB Hosting <br><br>Premium Support
-                    </p>
-                    <button class="info__sector-button">
-                        Get Started
-                    </button>
-                </div>
+
             </div>
         </section>
     </main>
