--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </section>
         <section class="main-info">
-            <dia class="main-info__header">
+            <div class="main-info__header">
                 <h1 class="switcher__title">
                     Get the right plan for future product.
                 </h1>
@@ -131,7 +131,7 @@
                         <label for="fid-2">Monthly</label>
                     </div>
                 </div>
-            </dia>
+            </div>
             <div class="info__sector">
                 <div class="info-card">
                     <p class="info__sector-textW">
